--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx8G
+org.gradle.daemon=false
+org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.4
-	loader_version=0.16.14
+	minecraft_version=1.21.1
+	yarn_mappings=1.21.1+build.3
+	loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 2.0.0
 	maven_group = ace.actually
 	archives_base_name = EM4ES
 
 # Dependencies
-	fabric_version=0.77.0+1.18.2
+	fabric_version=0.102.1+1.21.1
